--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
   <!-- HERO -->
   <header>
-    <h1>Explore Extrema</h1>
-    <p>Descubra as belezas naturais e atrações culturais de Extrema, MG.</p>
+    <div>
+      <img src="imagens/pedra-cume.jpg" alt="Pedra-cume">
+      <h1>Explore Extrema</h1>
+      <p>Descubra as belezas naturais e atrações culturais de Extrema, MG.</p>
+    </div>
   </header>
 
   <!-- CONTENT -->
